Added Transaction Function templates
