# controllers/transaction.controller.js
@@ -1,0 +1,24 @@
+exports.sendMoney = async (req, res) => {
+/*
+    #swagger.tags = ["Transaction"],
+    #swagger.parameters['body'] = {
+        in: 'body',
+        type: 'object',
+        description: 'Send Money to Address',
+        schema:  { $ref: "#/definitions/Transaction" }
+    }
+*/
+    
+}
+
+exports.requestMoney = async (req, res) => {
+/*
+    #swagger.tags = ["Transaction"],
+    #swagger.parameters['body'] = {
+        in: 'body',
+        type: 'object',
+        description: 'Request Money from Address',
+        schema:  { $ref: "#/definitions/Transaction" }
+    }
+*/
+}
