# swagger_output.json
@@ -145,7 +145,7 @@
             "in": "body",
             "description": "Update User Data",
             "schema": {
-              "$ref": "#/definitions/updateUser"
+              "$ref": "#/definitions/Update User"
             }
           }
         ],
@@ -156,6 +156,68 @@
           "400": {
             "description": "Bad Request"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/send-money": {
+      "post": {
+        "tags": [
+          "Transaction"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "description": "Send Money to Address",
+            "schema": {
+              "$ref": "#/definitions/Transaction"
+            }
+          }
+        ],
+        "responses": {
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/request-money": {
+      "post": {
+        "tags": [
+          "Transaction"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "description": "Request Money from Address",
+            "schema": {
+              "$ref": "#/definitions/Transaction"
+            }
+          }
+        ],
+        "responses": {
           "401": {
             "description": "Unauthorized"
           },
@@ -199,7 +261,7 @@
         "password"
       ]
     },
-    "updateUser": {
+    "Update User": {
       "type": "object",
       "properties": {
         "first_name": {
@@ -224,6 +286,23 @@
         "last_name",
         "phone",
         "email"
+      ]
+    },
+    "Transaction": {
+      "type": "object",
+      "properties": {
+        "address": {
+          "type": "string",
+          "example": "0xsdfufiwert89e5ugfuhgu7t5r79ty75ygh"
+        },
+        "amount": {
+          "type": "number",
+          "example": 1
+        }
+      },
+      "required": [
+        "address",
+        "amount"
       ]
     }
   }
